# daily-log

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  package-lock.json  package.json
public/: index.html
src/: App.js  App.scss  Menu.jsx  Pages.jsx  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  database.rs  datastore.rs  lib.rs  main.rs  models.rs  mutations.rs  query.rs  sql.rs
src-tauri/src/sql/: schema_001.sql
src/components/: index.js
src/components/forms/: CategoryForm.jsx  EntryForm.jsx  ProjectForm.jsx  TaskForm.jsx  index.js
src/components/layout/: About.jsx  AppContent.jsx  index.js
src/components/layout/appmenu/: AppMenu.jsx
src/components/menu/: Menu.jsx  menu.scss
src/components/shared/: Autocomplete.jsx  Button.jsx  Card.jsx  Filter.jsx  Form.jsx  Icon.jsx  List.jsx  Message.jsx  Modal.jsx  Table.jsx  Tabs.jsx  Toolbar.jsx  index.js  shared.scss
src/components/shared/Form/: Buttons.jsx  (+11 more)
src/consts/: enums.js
src/css/: main.scss  variables.scss
src/hooks/: categories.js  entries.js  index.js  projects.js  tasks.js
src/pages/: Configuration.jsx  Projects.jsx  Start.jsx  Tasks.jsx  index.js
src/pages/entries/: Context.jsx  DayView.jsx  Entries.jsx  EntryItem.jsx  MonthView.jsx  WeekView.jsx  entries.scss  useEntryPage.jsx
src/pages/start/: ActiveTasks.jsx  Entries.jsx  EntryModal.jsx  Start.jsx  TaskModal.jsx  start.scss
src/pages/tasks/: TaskBoard.jsx  TaskControls.jsx  TaskList.jsx  TaskTable.jsx  Tasks.jsx  tasks.scss
src/services/: app.js  dates.js  index.js  rand.js
(+7 files in other folders)
