[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.7", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.1.1", features = ["api-all"] }
thiserror = "1.0.*"
log = "0.4.*"
simplelog = "0.11.*"

[dependencies.rusqlite]
version = "0.26.*"
features = [ "bundled", "column_decltype" ]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
